# numcal

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindCuba.cmake
etc/: numcal.spec
scripts/: runNumcal.sh
src/: 3loop_fun12.h  3loop_fun33.h  CMakeLists.txt  numcal.c  numcal_config.h.in  testfun.h
